--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,100 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Courier New", Courier, monospace;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+body {
+  background: #eaeded;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+div.App {
   display: flex;
   flex-direction: column;
-  align-items: center;
+
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+
+  height: 100vh;
 }
 
-.App-link {
-  color: #61dafb;
+/* Card - User */
+div.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: #d5d8dc;
+  border-radius: 10px;
+
+  margin-bottom: 30px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+div.card img {
+  width: 200px;
+  height: 200px;
+
+  margin: 30px;
+  border-radius: 5px;
+}
+
+div.card ul.box {
+  list-style: none;
+  margin-bottom: 30px;
+}
+
+div.card ul.box li.username {
+  font-weight: bold;
+  font-size: 16px;
+}
+
+div.card ul.box li.login {
+  font-weight: normal;
+  font-size: 14px;
+}
+
+div.card ul.box li:nth-child(2) {
+  margin-bottom: 20px;
+}
+
+/* Form - Input */
+
+form {
+  padding: 10px;
+}
+
+input {
+  outline: none;
+}
+
+input[type="text"] {
+  height: 25px;
+  padding: 5px;
+  border-radius: 5px;
+  border-style: none;
+  margin: 5px;
+  text-align: center;
+  font-size: 14px;
+}
+
+input[type="submit"] {
+  color: #fff;
+  background: #58d68d;
+  height: 35px;
+  width: 60px;
+  font-weight: bold;
+  text-transform: uppercase;
+  border-radius: 5px;
+}
+
+input[type="submit"]:hover {
+  color: #58d68d;
+  background: white;
+}
+
+/* Feedback */
+
+h1 {
+  font-size: 12px;
+  color: red;
 }
